--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <main class="main py-5">
         <div class="container">
             <div class="row g-5 justify-content-center">
-                <div class="col-4">
+                <!-- <div class="col-4">
                     <div class="card p-3">
                         <img class="pin" src="./img/pin.svg" alt="">
-                        <img src="./img/th.jpg" alt="">
-                        <p class="description pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum  </p>
+                        <img src= alt="">
+                        <p class="description pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis hic</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
