feat: esecuzione logica

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row g-5 justify-content-center">
                 <!-- <div class="col-12 col-md-6 col-lg-4">
                     <div class="card p-3">
-                        <img class="pin" src="./img/pin.svg" alt="">
+                        <img class="pin" src="" alt="">
                         <img src= alt="">
                         <p class="description pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis hic</p>
                     </div>
@@ -43,12 +43,13 @@
         </div>
 
         <!-- Modale -->
-        <div class="overlay ">
+        <div class="overlay d-none">
             <div class="modale text-center">
-                <div>
-                    <button class="border my-3">Chiudi</button>
+                <button type="button" class=" close border my-3">Chiudi</button>
+                 <div class="modal-img">
+                     <img  src="" alt="">
                 </div>
-                <img src="./img/th.jpg" alt="">
+               
             </div>
         </div>
 
