feat: card hover

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="modale text-center">
                 <button type="button" class=" close border my-3">Chiudi</button>
                  <div class="modal-img">
-                     <img  src="" alt="">
+                     <!-- <img  src="" alt=""> -->
                 </div>
                
             </div>
